[package]
name = "lodestone_api"
version = "0.1.0"
authors = ["Anna Clemens <git@annaclemens.io>"]

edition = "2018"

[dependencies]
bb8 = { git = "https://github.com/khuey/bb8" }
bb8-redis = { git = "https://github.com/khuey/bb8" }
byteorder = "1"
failure = "0.1"
lazy_static = "1"
r2d2 = "0.8"
rocket = "0.4"
rocket_contrib = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1"
features = ["postgres", "r2d2", "serde_json", "chrono"]

[dependencies.ffxiv_types]
version = "1"
default-features = false

[dependencies.lodestone_parser]
git = "https://github.com/jkcclemens/lodestone_parser"
default-features = false

[dependencies.lodestone_scraper]
git = "https://github.com/jkcclemens/lodestone_scraper"

[dependencies.tokio]
version = "0.2"
features = ["rt-core", "rt-threaded", "macros", "time"]
